[package]
name = "glicol_server"
version = "0.13.2"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]

license-file = "LICENSE"
description = "Macros for Glicol engine."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# glicol_parser = { version = "0.13.2" }
# glicol_parser = { path = "../parser" }
glicol_synth = { version = "0.12.8" }
# glicol_synth = { path = "../synth", features = ["use-samples", "use-meta"]} 
# glicol_macros = "0.13.2"
glicol = { version = "0.12.8" }

# glicol_synth = { version = "0.13.2", features = ["use-samples", "use-meta"]} 
# # glicol_synth = { path = "../synth", features = ["use-samples", "use-meta"]} 
# # glicol_macros = "0.13.2"
# glicol = { version = "0.13.2" }

kira = "0.7.3"
rand = "0.8.5"
ringbuf = "0.3.1"
rusqlite = "0.28.0"